--- a/index.html
+++ b/index.html
@@ -13,15 +13,177 @@
 </head>
 
 <body>
-    <h1>Trivia Game</h1>
+    <h1>Aqua Teen Hunger Force Trivia Game</h1>
+    <h2>Timer: </h2>
 
 
 
-    
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    <form id="quiz" name="quiz">
+
+        <!-- 1 -->
+        <h4>#1</h4>
+        <p class="questions">What famous rapper wrote the ATHF theme song?</p>
+        <input type="radio" id="mc" name="question2" value="Hartford"> Jay-Z
+        <br>
+        <input type="radio" id="mc" name="question2" value="Heartford"> lil Wayne
+        <br>
+        <input type="radio" id="mc" name="question2" value="new"> Schoolly D
+        <br>
+        <input type="radio" id="mc" name="question2" value="Hnew1"> Tyga
+        <br>
+
+        <!-- 2 -->
+        <hr>
+        <h4>#2</h4>
+        <p class="questions">What are Carls nick-names for Frylock and Meatwad?</p>
+        <input type="radio" id="mc" name="question2" value="Hartford"> Hartford
+        <br>
+        <input type="radio" id="mc" name="question2" value="Heartford"> Fryman and Meatman
+        <br>
+        <input type="radio" id="mc" name="question2" value="new"> new
+        <br>
+        <input type="radio" id="mc" name="question2" value="Hnew1"> Hnew1
+        <br>
+
+        <!-- 3 -->
+        <hr>
+        <h4>#3</h4>
+        <p class="questions">What is the capital of New York?</p>
+
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+
+        <!-- 4 -->
+        <hr>
+        <h4>#4</h4>
+        <p class="questions">The ?</p>
+
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+
+        <!-- 5 -->
+        <hr>
+        <h4>#5</h4>
+        <p class="questions">Where does the show take place?</p>
+
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+
+        <!-- 6 -->
+        <hr>
+        <h4>#6</h4>
+        <p class="questions">What show did the Aqua Team first appear on?</p>
+
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+
+        <!-- 7 -->
+        <hr>
+        <h4>#7</h4>
+        <p class="questions">What is the name of Meatwads friend t?</p>
+
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+
+        <!-- 8 -->
+        <hr>
+        <h4>#8</h4>
+        <p class="questions">What is the capital of New York?</p>
+
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+
+        <!-- 9 -->
+        <hr>
+        <h4>#9</h4>
+        <p class="questions">What is the capital of New York?</p>
+
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+
+        <!-- 10 -->
+        <hr>
+        <h4>#10</h4>
+        <p class="questions">When traveling at a subsonic speed during the last one hour of hyper sleep, which vector of the Romulan nebula will
+            suffer the wrath of impenetrable quickening? And for extra points how many wraths to the nearest molton. (Be
+            specific this is a real question)</p>
+
+        <input id="textbox" type="text" name="question1">
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <hr>
+
+
+        <input id="button" type="button" value="I'm finished!" onclick="check();">
+
+
+    </form>
+
+    <div id="after_submit">
+        <p id="number_correct"></p>
+        <p id="message"></p>
+        <img id="picture">
+    </div>
+
+</html>
+
+
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
 <!-- <script src="/assets/javascript/game.js"></script> -->
-<script src="./assets/js/app.js"></script>
+<script src="./assets/javascript/app.js"></script>
 </body>
 
 </html>
+
+<!-- When traveling at a subsonic speed during the last one hour of hyper sleep, which vector of the Romulan nebula will suffer the wrath of impenetrable quickening? And for extra points how many wraths to the nearest molton. (Be specific this is a real question) -->
