--- a/index.html
+++ b/index.html
@@ -13,64 +13,78 @@
 </head>
 
 <body>
+<div class="main-game">
+
     <h1>Aqua Teen Hunger Force Trivia Game</h1>
-    <h2>Timer: </h2>
-
-
-
+    <h2 id="some_div">Timer: </h2>
     <form id="quiz" name="quiz">
-
         <!-- 1 -->
         <h4>#1</h4>
         <p class="questions">What famous rapper wrote the ATHF theme song?</p>
         <input type="radio" id="mc" name="question2" value="Hartford"> Jay-Z
         <br>
+        <br>
         <input type="radio" id="mc" name="question2" value="Heartford"> lil Wayne
+        <br>
         <br>
         <input type="radio" id="mc" name="question2" value="new"> Schoolly D
         <br>
+        <br>
         <input type="radio" id="mc" name="question2" value="Hnew1"> Tyga
+        <br>
         <br>
 
         <!-- 2 -->
         <hr>
         <h4>#2</h4>
         <p class="questions">What are Carls nick-names for Frylock and Meatwad?</p>
-        <input type="radio" id="mc" name="question2" value="Hartford"> Hartford
+        <input type="radio" id="mc" name="question2" value="Hartford"> Frywad and Meatlock
+        <br>
         <br>
         <input type="radio" id="mc" name="question2" value="Heartford"> Fryman and Meatman
         <br>
-        <input type="radio" id="mc" name="question2" value="new"> new
         <br>
-        <input type="radio" id="mc" name="question2" value="Hnew1"> Hnew1
+        <input type="radio" id="mc" name="question2" value="new"> Tim and Eric
+        <br>
+        <br>
+        <input type="radio" id="mc" name="question2" value="Hnew1"> Fryguy and Meatmonster
+        <br>
         <br>
 
         <!-- 3 -->
         <hr>
         <h4>#3</h4>
-        <p class="questions">What is the capital of New York?</p>
+        <p class="questions">When Frylock and Meatwad make a dog in Carls pool, what is the name the give the dog?</p>
 
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <input type="radio" id="mc" name="question3" value="Albany"> Buddy
         <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
         <br>
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <input type="radio" id="mc" name="question3" value="All Benny's"> Spaghetti
         <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <input type="radio" id="mc" name="question3" value="Albany"> Hand Banana
+        <br>
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> The Enforcer
+        <br>
         <br>
 
         <!-- 4 -->
         <hr>
         <h4>#4</h4>
-        <p class="questions">The ?</p>
+        <p class="questions">What is the name of Carl's car?</p>
 
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <input type="radio" id="mc" name="question3" value="Albany"> 2Fast4u
         <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
         <br>
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <input type="radio" id="mc" name="question3" value="All Benny's"> Lady Wagon
         <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <input type="radio" id="mc" name="question3" value="Albany"> 2Wycked
+        <br>
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> Big Bertha
+        <br>
         <br>
 
         <!-- 5 -->
@@ -80,11 +94,15 @@
 
         <input type="radio" id="mc" name="question3" value="Albany"> Albany
         <br>
+        <br>
         <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
         <br>
         <input type="radio" id="mc" name="question3" value="Albany"> Albany
         <br>
+        <br>
         <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
         <br>
 
         <!-- 6 -->
@@ -92,55 +110,71 @@
         <h4>#6</h4>
         <p class="questions">What show did the Aqua Team first appear on?</p>
 
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <input type="radio" id="mc" name="question3" value="Albany"> Scooby Doo
         <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
         <br>
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <input type="radio" id="mc" name="question3" value="All Benny's"> Power Puff Girls
         <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <input type="radio" id="mc" name="question3" value="Albany"> Sealab 2021
+        <br>
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> Space Ghost Coast to Coast
+        <br>
         <br>
 
         <!-- 7 -->
         <hr>
         <h4>#7</h4>
-        <p class="questions">What is the name of Meatwads friend t?</p>
+        <p class="questions">What is the name of Meatwads friend that happens to be a box?</p>
 
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <input type="radio" id="mc" name="question3" value="Albany"> Boxy Brown
         <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
         <br>
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <input type="radio" id="mc" name="question3" value="All Benny's"> Big Daddy Box
         <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <input type="radio" id="mc" name="question3" value="Albany"> Big Boxie
+        <br>
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> Artie
+        <br>
         <br>
 
         <!-- 8 -->
         <hr>
         <h4>#8</h4>
-        <p class="questions">What is the capital of New York?</p>
+        <p class="questions">How many seaons did the show run for?</p>
 
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <input type="radio" id="mc" name="question3" value="Albany"> 3
         <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
         <br>
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <input type="radio" id="mc" name="question3" value="All Benny's"> 11
         <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <input type="radio" id="mc" name="question3" value="Albany"> 7
+        <br>
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> 2
+        <br>
         <br>
 
         <!-- 9 -->
         <hr>
         <h4>#9</h4>
-        <p class="questions">What is the capital of New York?</p>
+        <p class="questions">What is the name of the song Carl wrote?</p>
 
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <input type="radio" id="mc" name="question3" value="Albany"> Aqua Teen Forver and Ever
         <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
         <br>
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
+        <input type="radio" id="mc" name="question3" value="All Benny's"> I Want to Rock Your Body (Till the Break of Dawn)
         <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
+        <input type="radio" id="mc" name="question3" value="Albany"> Tonight, Big Stick Go Boom!
+        <br>
+        <br>
+        <input type="radio" id="mc" name="question3" value="All Benny's"> Cant Stop, Wont Stop
+        <br>
         <br>
 
         <!-- 10 -->
@@ -153,29 +187,37 @@
         <input id="textbox" type="text" name="question1">
         <input type="radio" id="mc" name="question3" value="Albany"> Albany
         <br>
+        <br>
         <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
         <br>
         <input type="radio" id="mc" name="question3" value="Albany"> Albany
         <br>
+        <br>
         <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
+        <br>
         <br>
         <hr>
 
 
         <input id="button" type="button" value="I'm finished!" onclick="check();">
+        <!-- <div class="finish-game">
+                <button class="finish-button" >Finish</button>
+            </div> -->
 
 
     </form>
-
+</div>
+<!-- start button -->
+<div class="start-game">
+    <button class="start-button" >Start</button>
+</div>
+<!--  -->
     <div id="after_submit">
         <p id="number_correct"></p>
         <p id="message"></p>
         <img id="picture">
     </div>
-
-</html>
-
-
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
