--- a/index.html
+++ b/index.html
@@ -13,206 +13,225 @@
 </head>
 
 <body>
-<div class="main-game">
+    <div class="main-game">
 
-    <h1>Aqua Teen Hunger Force Trivia Game</h1>
-    <h2 id="some_div">Timer: </h2>
-    <form id="quiz" name="quiz">
-        <!-- 1 -->
-        <h4>#1</h4>
-        <p class="questions">What famous rapper wrote the ATHF theme song?</p>
-        <input type="radio" id="mc" name="question2" value="Hartford"> Jay-Z
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question2" value="Heartford"> lil Wayne
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question2" value="new"> Schoolly D
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question2" value="Hnew1"> Tyga
-        <br>
-        <br>
+        <!-- <div class="logo">
+            <img src="assets/images/athf2.png">
+        </div> -->
+        <h1> Aqua Teen Hunger Force Trivia Game</h1>
+        <h2 id="some_div">Timer: </h2>
+        <form id="quiz" name="quiz">
+            <!-- 1 -->
+            <h4>#1</h4>
+            <p class="questions">What famous rapper wrote the ATHF theme song?</p>
+            <input type="radio" id="mc" name="question1" value="no"> Jay-Z
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question1" value="no"> lil Wayne
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question1" value="yes"> Schoolly D
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question1" value="no"> J Dilla
+            <br>
+            <br>
 
-        <!-- 2 -->
-        <hr>
-        <h4>#2</h4>
-        <p class="questions">What are Carls nick-names for Frylock and Meatwad?</p>
-        <input type="radio" id="mc" name="question2" value="Hartford"> Frywad and Meatlock
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question2" value="Heartford"> Fryman and Meatman
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question2" value="new"> Tim and Eric
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question2" value="Hnew1"> Fryguy and Meatmonster
-        <br>
-        <br>
+            <!-- 2 -->
+            <hr>
+            <h4>#2</h4>
+            <p class="questions">What are Carls nick-names for Frylock and Meatwad?</p>
+            <input type="radio" id="mc" name="question2" value="no"> Frywad and Meatlock
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question2" value="yes"> Fryman and Meatman
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question2" value="no"> Tim and Eric
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question2" value="no"> Fryguy and Meatmonster
+            <br>
+            <br>
 
-        <!-- 3 -->
-        <hr>
-        <h4>#3</h4>
-        <p class="questions">When Frylock and Meatwad make a dog in Carls pool, what is the name the give the dog?</p>
+            <!-- 3 -->
+            <hr>
+            <h4>#3</h4>
+            <p class="questions">When Frylock and Meatwad make a dog in Carls pool, what is the name the give the dog?</p>
 
-        <input type="radio" id="mc" name="question3" value="Albany"> Buddy
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> Spaghetti
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="Albany"> Hand Banana
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> The Enforcer
-        <br>
-        <br>
+            <input type="radio" id="mc" name="question3" value="Albany"> Buddy
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question3" value="All Benny's"> Spaghetti
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question3" value="yes"> Hand Banana
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question3" value="All Benny's"> The Enforcer
+            <br>
+            <br>
 
-        <!-- 4 -->
-        <hr>
-        <h4>#4</h4>
-        <p class="questions">What is the name of Carl's car?</p>
+            <!-- 4 -->
+            <hr>
+            <h4>#4</h4>
+            <p class="questions">What is the name of Carl's car?</p>
 
-        <input type="radio" id="mc" name="question3" value="Albany"> 2Fast4u
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> Lady Wagon
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="Albany"> 2Wycked
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> Big Bertha
-        <br>
-        <br>
+            <input type="radio" id="mc" name="question4" value="Albany"> 2Fast4u
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question4" value="All Benny's"> Lady Wagon
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question4" value="yes"> 2Wycked
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question4" value="All Benny's"> Big Bertha
+            <br>
+            <br>
 
-        <!-- 5 -->
-        <hr>
-        <h4>#5</h4>
-        <p class="questions">Where does the show take place?</p>
+            <!-- 5 -->
+            <hr>
+            <h4>#5</h4>
+            <p class="questions">Wh?</p>
 
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
-        <br>
-        <br>
+            <input type="radio" id="mc" name="question6" value="Albany"> Albany
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question6" value="All Benny's"> All Benny's
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question6" value="Albany"> Albany
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question6" value="All Benny's"> All Benny's
+            <br>
+            <br>
 
-        <!-- 6 -->
-        <hr>
-        <h4>#6</h4>
-        <p class="questions">What show did the Aqua Team first appear on?</p>
+            <!-- 6 -->
+            <hr>
+            <h4>#6</h4>
+            <p class="questions">What show did the Aqua Team first appear on?</p>
 
-        <input type="radio" id="mc" name="question3" value="Albany"> Scooby Doo
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> Power Puff Girls
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="Albany"> Sealab 2021
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> Space Ghost Coast to Coast
-        <br>
-        <br>
+            <input type="radio" id="mc" name="question6" value="Albany"> Scooby Doo
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question6" value="All Benny's"> Power Puff Girls
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question6" value="Albany"> Sealab 2021
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question6" value="yes"> Space Ghost Coast to Coast
+            <br>
+            <br>
 
-        <!-- 7 -->
-        <hr>
-        <h4>#7</h4>
-        <p class="questions">What is the name of Meatwads friend that happens to be a box?</p>
+            <!-- 7 -->
+            <hr>
+            <h4>#7</h4>
+            <p class="questions">What is the name of Meatwads friend that happens to be a box?</p>
 
-        <input type="radio" id="mc" name="question3" value="Albany"> Boxy Brown
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> Big Daddy Box
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="Albany"> Big Boxie
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> Artie
-        <br>
-        <br>
+            <input type="radio" id="mc" name="question7" value="yes"> Boxy Brown
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question7" value="no"> Big Daddy Box
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question7" value="no"> Big Boxie
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question7" value="no"> Artie
+            <br>
+            <br>
 
-        <!-- 8 -->
-        <hr>
-        <h4>#8</h4>
-        <p class="questions">How many seaons did the show run for?</p>
+            <!-- 8 -->
+            <hr>
+            <h4>#8</h4>
+            <p class="questions">How many seaons did the show run for?</p>
 
-        <input type="radio" id="mc" name="question3" value="Albany"> 3
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> 11
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="Albany"> 7
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> 2
-        <br>
-        <br>
+            <input type="radio" id="mc" name="question8" value="no"> 3 Seasons
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question8" value="yes"> 11 Seasons
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question8" value="no"> 7 Seasons
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question8" value="no"> 2 Seasons
+            <br>
+            <br>
 
-        <!-- 9 -->
-        <hr>
-        <h4>#9</h4>
-        <p class="questions">What is the name of the song Carl wrote?</p>
+            <!-- 9 -->
+            <hr>
+            <h4>#9</h4>
+            <p class="questions">What is the name of the song Carl wrote?</p>
 
-        <input type="radio" id="mc" name="question3" value="Albany"> Aqua Teen Forver and Ever
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> I Want to Rock Your Body (Till the Break of Dawn)
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="Albany"> Tonight, Big Stick Go Boom!
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> Cant Stop, Wont Stop
-        <br>
-        <br>
+            <input type="radio" id="mc" name="question9" value="no"> Aqua Teen Forever and Ever
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question9" value="yes"> I Want to Rock Your Body (Till the Break of Dawn)
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question9" value="no"> Tonight, Big Stick Go Boom!
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question9" value="no"> Cant Stop, Wont Stop
+            <br>
+            <br>
 
-        <!-- 10 -->
-        <hr>
-        <h4>#10</h4>
-        <p class="questions">When traveling at a subsonic speed during the last one hour of hyper sleep, which vector of the Romulan nebula will
-            suffer the wrath of impenetrable quickening? And for extra points how many wraths to the nearest molton. (Be
-            specific this is a real question)</p>
+            <!-- 10 -->
+            <hr>
+            <h4>#10</h4>
+            <p class="questions">When traveling at a subsonic speed during the last one hour of hyper sleep, which vector of the Romulan nebula
+                will suffer the wrath of impenetrable quickening? And for extra points how many wraths to the nearest molton.
+                (Be specific this is a real question)</p>
 
-        <input id="textbox" type="text" name="question1">
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="Albany"> Albany
-        <br>
-        <br>
-        <input type="radio" id="mc" name="question3" value="All Benny's"> All Benny's
-        <br>
-        <br>
-        <hr>
-
-
-        <input id="button" type="button" value="I'm finished!" onclick="check();">
-        <!-- <div class="finish-game">
-                <button class="finish-button" >Finish</button>
-            </div> -->
+            <input id="textbox" type="text" name="question10">
+            <input type="radio" id="mc" name="question10" value="Albany"> Albany
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question10" value="All Benny's"> All Benny's
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question10" value="Albany"> Albany
+            <br>
+            <br>
+            <input type="radio" id="mc" name="question10" value="All Benny's"> All Benny's
+            <br>
+            <br>
+            <hr>
+            <button class="end-button">Finish!</button>
 
 
-    </form>
-</div>
-<!-- start button -->
-<div class="start-game">
-    <button class="start-button" >Start</button>
-</div>
-<!--  -->
+
+        </form>
+        <div class="carl">
+            <img src="assets/images/Carl_Brutananadilewski.png">
+        </div>
+        <div class="athf">
+            <img src="assets/images/athf.png">
+        </div>
+        <!-- end of main-game -->
+    </div>
+
+    <!-- <input id="button" type="button" value="I'm finished!" onclick="check();"> -->
+    <!-- <div class="finish-game">
+        <button class="finish-button" >Finish</button>
+    </div> -->
+    <!-- start button -->
+    <div class="start-game">
+        <h3>Welcome to the Aqua Teen Hunger Force Trivia Game</h3>
+        <h3>You will have 90 seconds to complete the game</h3>
+        <button class="start-button">Start Game!</button>
+    </div>
+    <!--  -->
+    <div class="end-game">
+        <h3>Game Over</h3>
+        <h3 id="number_correct"></h3>
+        <button class="end-button">Try Again!</button>
+    </div>
+    <!--  -->
     <div id="after_submit">
         <p id="number_correct"></p>
         <p id="message"></p>
@@ -220,10 +239,10 @@
     </div>
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-<!-- <script src="/assets/javascript/game.js"></script> -->
-<script src="./assets/javascript/app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <!-- <script src="/assets/javascript/game.js"></script> -->
+    <script src="./assets/javascript/app.js"></script>
 </body>
 
 </html>
