--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <br>
             <br>
             <hr>
-            <button class="end-button">Finish!</button>
+            <button class="submitBtn">Finish!</button>
 
 
 
