--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <input type="radio" id="mc" name="question6" value="Albany"> Albany
             <br>
             <br>
-            <input type="radio" id="mc" name="question6" value="All Benny's"> All Benny's
+            <input type="radio" id="mc" name="question6" value="yes"> All Benny's
             <br>
             <br>
             <input type="radio" id="mc" name="question6" value="Albany"> Albany
@@ -228,15 +228,11 @@
     <!--  -->
     <div class="end-game">
         <h3>Game Over</h3>
-        <h3 id="number_correct"></h3>
+        <h3 id="number_correct"> </h3>
         <button class="end-button">Try Again!</button>
     </div>
     <!--  -->
-    <div id="after_submit">
-        <p id="number_correct"></p>
-        <p id="message"></p>
-        <img id="picture">
-    </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -247,4 +243,3 @@
 
 </html>
 
-<!-- When traveling at a subsonic speed during the last one hour of hyper sleep, which vector of the Romulan nebula will suffer the wrath of impenetrable quickening? And for extra points how many wraths to the nearest molton. (Be specific this is a real question) -->
