--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
             <h4>#3</h4>
             <p class="questions">When Frylock and Meatwad make a dog in Carls pool, what is the name the give the dog?</p>
 
-            <input type="radio" id="mc" name="question3" value="Albany"> Buddy
+            <input type="radio" id="mc" name="question3" value="no"> Buddy
             <br>
             <br>
-            <input type="radio" id="mc" name="question3" value="All Benny's"> Spaghetti
+            <input type="radio" id="mc" name="question3" value="no"> Spaghetti
             <br>
             <br>
             <input type="radio" id="mc" name="question3" value="yes"> Hand Banana
             <br>
             <br>
-            <input type="radio" id="mc" name="question3" value="All Benny's"> The Enforcer
+            <input type="radio" id="mc" name="question3" value="no"> The Enforcer
             <br>
             <br>
 
@@ -77,16 +77,16 @@
             <h4>#4</h4>
             <p class="questions">What is the name of Carl's car?</p>
 
-            <input type="radio" id="mc" name="question4" value="Albany"> 2Fast4u
+            <input type="radio" id="mc" name="question4" value="no"> 2Fast4u
             <br>
             <br>
-            <input type="radio" id="mc" name="question4" value="All Benny's"> Lady Wagon
+            <input type="radio" id="mc" name="question4" value="np"> Lady Wagon
             <br>
             <br>
             <input type="radio" id="mc" name="question4" value="yes"> 2Wycked
             <br>
             <br>
-            <input type="radio" id="mc" name="question4" value="All Benny's"> Big Bertha
+            <input type="radio" id="mc" name="question4" value="no"> Big Bertha
             <br>
             <br>
 
@@ -95,16 +95,16 @@
             <h4>#5</h4>
             <p class="questions">Wh?</p>
 
-            <input type="radio" id="mc" name="question6" value="Albany"> Albany
+            <input type="radio" id="mc" name="question5" value="no"> Albany
             <br>
             <br>
-            <input type="radio" id="mc" name="question6" value="yes"> All Benny's
+            <input type="radio" id="mc" name="question5" value="yes"> All Benny's
             <br>
             <br>
-            <input type="radio" id="mc" name="question6" value="Albany"> Albany
+            <input type="radio" id="mc" name="question5" value="no"> Albany
             <br>
             <br>
-            <input type="radio" id="mc" name="question6" value="All Benny's"> All Benny's
+            <input type="radio" id="mc" name="question5" value="no"> All Benny's
             <br>
             <br>
 
@@ -113,13 +113,13 @@
             <h4>#6</h4>
             <p class="questions">What show did the Aqua Team first appear on?</p>
 
-            <input type="radio" id="mc" name="question6" value="Albany"> Scooby Doo
+            <input type="radio" id="mc" name="question6" value="no"> Scooby Doo
             <br>
             <br>
-            <input type="radio" id="mc" name="question6" value="All Benny's"> Power Puff Girls
+            <input type="radio" id="mc" name="question6" value="no"> Power Puff Girls
             <br>
             <br>
-            <input type="radio" id="mc" name="question6" value="Albany"> Sealab 2021
+            <input type="radio" id="mc" name="question6" value="no"> Sealab 2021
             <br>
             <br>
             <input type="radio" id="mc" name="question6" value="yes"> Space Ghost Coast to Coast
