--- a/index.html
+++ b/index.html
@@ -93,18 +93,18 @@
             <!-- 5 -->
             <hr>
             <h4>#5</h4>
-            <p class="questions">Wh?</p>
+            <p class="questions">What is Carls last Name?</p>
 
-            <input type="radio" id="mc" name="question5" value="no"> Albany
+            <input type="radio" id="mc" name="question5" value="no"> Boomer
             <br>
             <br>
-            <input type="radio" id="mc" name="question5" value="yes"> All Benny's
+            <input type="radio" id="mc" name="question5" value="yes"> Brutananadilewski
             <br>
             <br>
-            <input type="radio" id="mc" name="question5" value="no"> Albany
+            <input type="radio" id="mc" name="question5" value="no"> Weird
             <br>
             <br>
-            <input type="radio" id="mc" name="question5" value="no"> All Benny's
+            <input type="radio" id="mc" name="question5" value="no"> Bradford
             <br>
             <br>
 
@@ -188,17 +188,6 @@
                 (Be specific this is a real question)</p>
 
             <input id="textbox" type="text" name="question10">
-            <input type="radio" id="mc" name="question10" value="Albany"> Albany
-            <br>
-            <br>
-            <input type="radio" id="mc" name="question10" value="All Benny's"> All Benny's
-            <br>
-            <br>
-            <input type="radio" id="mc" name="question10" value="Albany"> Albany
-            <br>
-            <br>
-            <input type="radio" id="mc" name="question10" value="All Benny's"> All Benny's
-            <br>
             <br>
             <hr>
             <button class="submitBtn">Finish!</button>
@@ -209,9 +198,9 @@
         <div class="carl">
             <img src="assets/images/Carl_Brutananadilewski.png">
         </div>
-        <div class="athf">
+        <!-- <div class="athf">
             <img src="assets/images/athf.png">
-        </div>
+        </div> -->
         <!-- end of main-game -->
     </div>
 
@@ -242,4 +231,3 @@
 </body>
 
 </html>
-
